sliders and heading aligned correctly

--- a/src/style.scss
+++ b/src/style.scss
@@ -34,7 +34,7 @@ html, body, #react-app {
 
 	.heading-text {
 		margin-left: 15%;
-		margin-top: 2%;
+		margin-top: 3%;
 	}
 
 	.heading-menu {
@@ -45,18 +45,24 @@ html, body, #react-app {
 
 .menu {
 
+	margin-top: 13px;
+	margin-bottom: 15px;
+
 	.slide {
 		color: $slider-text-color;
 		background-color: $body-background-color;
-		margin-top: 2%;
-		margin-bottom: 2%;
+		
+		& > .row {
+			max-height: 20px;
+		}
 
 		.slide-icon {
 			border: 1px solid $app-background-color;
 			width: 10px;
 			height: 10px;
 			border-radius: 50%;
-			margin-top: 4px;
+			margin-top: 5px;
+			margin-left: 5px;
 
 			&.all {
 				background-color: $all-slider-icon-color;
@@ -75,6 +81,7 @@ html, body, #react-app {
 			text-transform: uppercase;
 			color: $app-background-color;
 			text-align: right;
+			margin-bottom: -4px;
 		}
 	}
 }
